@@ -4,6 +4,10 @@
 	* hw/xfree86/os-support/bus/Pci.h:
 	Add support for kFreeBSD systems.  (Robert Millan, Aurelien Jarno)
 
+	* hw/xfree86/loader/loader.h:
+	* hw/xfree86/loader/loader.c:
+	Completely remove relocation pointer tables.
+
 2006-06-01  Adam Jackson  <ajax@freedesktop.org>
 
 	* hw/xfree86/common/xf86Init.c:
